# stats202_final

./: activate.fish  classification.ipynb  data_exploration.ipynb  forecasting.ipynb  pyproject.toml  segmentation.ipynb  treatment.ipynb
lib/: data.py
lib/.ipynb_checkpoints/: metadata-checkpoint.py
notebook/: data_exploration.ipynb
notebook/.ipynb_checkpoints/: data_exploration-checkpoint.ipynb
submission/: PANSS.csv  status.csv
submission/.ipynb_checkpoints/: PANSS-checkpoint.csv  status-checkpoint.csv
