[tool.poetry]
name = "stats202_proj"
version = "0.1.0"
description = ""
authors = ["Kevin Chen <kvchen@fb.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
pandas = "^0.25.0"
scikit-learn = "^0.21.3"
ipykernel = "^5.1.1"
seaborn = "^0.9.0"
category_encoders = "^2.0.0"
imbalanced-learn = "^0.5.0"
xgboost = "^0.90"
statsmodels = "^0.10.1"
matplotlib = "3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
